<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_activity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="8dp"
        android:text="@string/pip_error"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        ads:layout_constraintBottom_toTopOf="@+id/main_activity_button"
        ads:layout_constraintTop_toBottomOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pip_btn_txt"
        ads:layout_constraintBottom_toTopOf="@+id/activity_main_banner_adView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/activity_main_banner_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/test_ad_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>